--- a/index/templates/settings.html
+++ b/index/templates/settings.html
@@ -3,8 +3,8 @@
     <a class="btn-dope toggle" data-toggle="collapse" href="#change-collapse" aria-expanded="false" aria-controls="change-collapse">
       Change Password
     </a>
-    <form class="settings-form" action="{% url 'change_password' %}" method="POST">
-      <div class="collapse fade change-collapse" id="change-collapse">
+    <div class="collapse fade change-collapse" id="change-collapse">
+      <form class="settings-form" action="{% url 'change_password' %}" method="POST">
         {% csrf_token %}
         <div class="form-row">
           <div class="col-12 dope-form-group">
@@ -27,8 +27,8 @@
             </button>
           </div>
         </div>
-      </div>
-    </form>
+      </form>
+    </div>
   </div>
   <div class="col-12 order-1 col-lg-4 order-lg-2 dope-wrapper">
     {% if errors or message %}
@@ -36,48 +36,62 @@
         {% include "errors.min.html" %}
       </div>
     {% endif %}
-    <form class="settings-form" action="{% url 'settings' %}" method="POST">
-      {% csrf_token %}
-      <div class="form-row">
-        <div class="col-12 dope-form-group">
-          <label for="email">Email</label>
-        </div>
-        <div class="col dope-form-group">
-          <input class="dope-field" type="email" name="email" id="email" value="{{ user_form.email.value }}">
-        </div>
-        <div class="col-auto">
-          <button class="btn-dope" type="submit">Save</button>
-        </div>
-        <div class="col-12 dope-form-group">
-          <label for="theme">Theme</label>
-          {% if profile_form.theme.value == "dark" %}
+    <a class="btn-dope toggle" data-toggle="collapse" href="#general-collapse" aria-expanded="false" aria-controls="general-collapse">
+      General Settings
+    </a>
+    <div class="collapse fade general-collapse" id="general-collapse">
+      <form class="settings-form" action="{% url 'settings' %}" method="POST">
+        {% csrf_token %}
+        <div class="form-row">
+          <div class="col-12 dope-form-group">
+            <label for="email">Email</label>
+          </div>
+          <div class="col dope-form-group">
+            <input class="dope-field" type="email" name="email" id="email" value="{{ user_form.email.value }}">
+          </div>
+          <div class="col-auto">
+            <button class="btn-dope" type="submit">Save</button>
+          </div>
+          <div class="col-12 dope-form-group">
+            <label for="theme">Theme</label>
+            {% if user.profile.theme == "dark" %}
             <input class="theme" type="hidden" name="theme" value="dark" />
             <button type="submit" class="btn-dope theme-button">Light</button>
             <button type="button" class="btn-dope theme-button active">Dark</button>
-          {% elif profile_form.theme.value == "light" %}
+            <button type="submit" class="btn-dope theme-button">Christmas</button>
+            {% elif user.profile.theme == "light" %}
             <input class="theme" type="hidden" name="theme" value="light" />
             <button type="button" class="btn-dope theme-button active">Light</button>
             <button type="submit" class="btn-dope theme-button">Dark</button>
-          {% endif %}
+            <button type="submit" class="btn-dope theme-button">Christmas</button>
+            {% elif user.profile.theme == "christmas" %}
+            <input class="theme" type="hidden" name="theme" value="christmas" />
+            <button type="submit" class="btn-dope theme-button">Light</button>
+            <button type="submit" class="btn-dope theme-button">Dark</button>
+            <button type="button" class="btn-dope theme-button active">Christmas</button>
+            {% endif %}
+          </div>
         </div>
-      </div>
-    </form>
+      </form>
+    </div>
   </div>
   <div class="col-12 order-3 col-lg-4 dope-wrapper">
-    <p>Delete account? Your playlist and subscriptions will be lost forever.</p>
     <a class="btn-dope toggle" data-toggle="collapse" href="#solong-collapse" aria-expanded="false" aria-controls="solong-collapse">
       Delete Account
     </a>
-    <form class="solong-form" action="{% url 'solong' %}" method="POST">
-      {% csrf_token %}
-      <div class="collapse fade solong-collapse" id="solong-collapse">
+    <div class="collapse fade solong-collapse" id="solong-collapse">
+      <form class="solong-form" action="{% url 'solong' %}" method="POST">
+        {% csrf_token %}
+        <p>
+          Delete account? Your playlist and subscriptions will be lost forever.
+        </p>
         <button class="btn-dope" type="submit">
           Yes
         </button>
         <a class="btn-dope" data-toggle="collapse" href="#solong-collapse" aria-expanded="false" aria-controls="solong-collapse">
           No
         </a>
-      </div>
-    </form>
+      </form>
+    </div>
   </div>
 </div>
