--- a/index/templates/settings.html
+++ b/index/templates/settings.html
@@ -3,7 +3,7 @@
     <a class="btn-dope toggle" data-toggle="collapse" href="#change-collapse" aria-expanded="false" aria-controls="change-collapse">
       Change Password
     </a>
-    <div class="collapse fade change-collapse" id="change-collapse">
+    <div class="collapse fade settings-collapse" id="change-collapse">
       <form class="settings-form" action="{% url 'change_password' %}" method="POST">
         {% csrf_token %}
         <div class="form-row">
@@ -39,7 +39,7 @@
     <a class="btn-dope toggle" data-toggle="collapse" href="#general-collapse" aria-expanded="false" aria-controls="general-collapse">
       General Settings
     </a>
-    <div class="collapse fade general-collapse" id="general-collapse">
+    <div class="collapse fade settings-collapse" id="general-collapse">
       <form class="settings-form" action="{% url 'settings' %}" method="POST">
         {% csrf_token %}
         <div class="form-row">
@@ -79,7 +79,7 @@
     <a class="btn-dope toggle" data-toggle="collapse" href="#solong-collapse" aria-expanded="false" aria-controls="solong-collapse">
       Delete Account
     </a>
-    <div class="collapse fade solong-collapse" id="solong-collapse">
+    <div class="collapse fade settings-collapse" id="solong-collapse">
       <form class="solong-form" action="{% url 'solong' %}" method="POST">
         {% csrf_token %}
         <p>
