--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -19,7 +19,7 @@
       </a>
       <div class="player-buttons">
         <button class="btn-dope player-minimize">
-          <i class="fas fa-minus" title="Minimize"></i>
+          <i class="fas fa-angle-down" title="Minimize"></i>
         </button>
         <button class="btn-dope player-close-toggle" data-toggle="collapse" data-target="#player-close-collapse" aria-expanded="false">
           <i class="fas fa-times" title="Close"></i>
@@ -45,7 +45,7 @@
       </p>
       <button class="dope-toggle" data-toggle="collapse" data-target="#player-collapse"
         aria-expanded="false">
-        <i class="fas fa-angle-down" title="Expand"></i>
+        <i class="fas fa-angle-up" title="Expand"></i>
       </button>
       <div class="collapse fade player-collapse" id="player-collapse">
         <p class="player-description">
