--- a/index/templates/logo.html
+++ b/index/templates/logo.html
@@ -1,9 +1,9 @@
-<div class="login-buttons">
+<div class="logo">
   <button class="btn-dope active">d</button>
   <button class="btn-dope active">o</button>
   <button class="btn-dope active">p</button>
-  <button class="btn-dope active spin">e</button>
-  <button class="btn-dope active spin">p</button>
-  <button class="btn-dope active spin">o</button>
-  <button class="btn-dope active spin">d</button>
+  <button class="btn-dope active">e</button>
+  <button class="btn-dope active">p</button>
+  <button class="btn-dope active">o</button>
+  <button class="btn-dope active">d</button>
 </div>
