--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -50,7 +50,7 @@
                     Forgot Password?
                   </a>
                 </div>
-                <div class="col form-check">
+                <div class="col">
                   <label class="dope-check-label">
                     <input class="dope-check" type="checkbox" name="remember" id="remember">
                     <span>
@@ -142,7 +142,7 @@
                     Forgot Password?
                   </a>
                 </div>
-                <div class="col form-check">
+                <div class="col">
                   <label class="dope-check-label">
                     <input class="dope-check" type="checkbox" name="remember" id="remember">
                     <span>
@@ -234,7 +234,7 @@
                     Forgot Password?
                   </a>
                 </div>
-                <div class="col form-check">
+                <div class="col">
                   <label class="dope-check-label">
                     <input class="dope-check" type="checkbox" name="remember" id="remember">
                     <span>
@@ -326,7 +326,7 @@
                     Forgot Password?
                   </a>
                 </div>
-                <div class="col form-check">
+                <div class="col">
                   <label class="dope-check-label">
                     <input class="dope-check" type="checkbox" name="remember" id="remember">
                     <span>
