--- a/podcasts/templates/last_played.html
+++ b/podcasts/templates/last_played.html
@@ -15,7 +15,7 @@
       </a>
       <button class="dope-toggle" tabindex="{{ forloop.counter }}" data-toggle="collapse" data-target="#last-played-collapse{{ forloop.counter }}"
       aria-expanded="false">
-        <i class="fas fa-angle-up" title="Expand"></i>
+        <i class="fas fa-angle-up fa-lg" title="Expand"></i>
       </button>
       <h1>
         <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}" title="{{ episode.podcast.title }}">
