--- a/podcasts/templates/results_bar.html
+++ b/podcasts/templates/results_bar.html
@@ -8,7 +8,7 @@
       <div class="extra-options">
         <a class="btn-dope reverse-toggle" data-toggle="collapse" href="#results-collapse-{{ results.view }}" aria-expanded="true"
           aria-controls="results-collapse">
-          <i class="fas fa-angle-up" title="Minimize"></i>
+          <i class="fas fa-angle-up fa-lg" title="Minimize"></i>
         </a>
         <a class="btn-dope results-close" href="/">
           <i class="fas fa-times" title="Close"></i>
