--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -28,7 +28,7 @@
     <!-- MAIN CONTENT -->
     <div class="container" id="main-wrapper">
       <button class="scroll-up d-none">
-        <i class="fas fa-angle-up" title="Up"></i>
+        <i class="fas fa-angle-up fa-lg" title="Up"></i>
       </button>
       <div class="row">
         <div class="col-12 order-3 col-lg-6 order-lg-2" id="left">
