--- a/index/templates/settings.html
+++ b/index/templates/settings.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-12 order-2 col-lg-4 order-lg-1 dope-wrapper">
-    <a class="btn-dope toggle" data-toggle="collapse" href="#change-collapse" aria-expanded="false" aria-controls="change-collapse">
+    <a class="btn-dope" data-toggle="collapse" href="#change-collapse" aria-expanded="false" aria-controls="change-collapse">
       Change Password
     </a>
     <div class="collapse fade settings-collapse" id="change-collapse">
@@ -36,7 +36,7 @@
         {% include "errors.min.html" %}
       </div>
     {% endif %}
-    <a class="btn-dope toggle" data-toggle="collapse" href="#general-collapse" aria-expanded="false" aria-controls="general-collapse">
+    <a class="btn-dope" data-toggle="collapse" href="#general-collapse" aria-expanded="false" aria-controls="general-collapse">
       General Settings
     </a>
     <div class="collapse fade settings-collapse" id="general-collapse">
@@ -54,37 +54,39 @@
           </div>
           <div class="col-12 dope-form-group">
             <label for="theme">Theme</label>
-            {% if user.profile.theme == "dark" %}
-            <input class="theme" type="hidden" name="theme" value="dark" />
-            <button type="submit" class="btn-dope theme-button">Light</button>
-            <button type="button" class="btn-dope theme-button active">Dark</button>
-            <button type="submit" class="btn-dope theme-button">Christmas</button>
-            {% elif user.profile.theme == "light" %}
-            <input class="theme" type="hidden" name="theme" value="light" />
-            <button type="button" class="btn-dope theme-button active">Light</button>
-            <button type="submit" class="btn-dope theme-button">Dark</button>
-            <button type="submit" class="btn-dope theme-button">Christmas</button>
-            {% elif user.profile.theme == "christmas" %}
-            <input class="theme" type="hidden" name="theme" value="christmas" />
-            <button type="submit" class="btn-dope theme-button">Light</button>
-            <button type="submit" class="btn-dope theme-button">Dark</button>
-            <button type="button" class="btn-dope theme-button active">Christmas</button>
-            {% endif %}
+            <div class="dope-buttons">
+              {% if user.profile.theme == "dark" %}
+              <input class="theme" type="hidden" name="theme" value="dark" />
+              <button type="submit" class="btn-dope theme-button">Light</button>
+              <button type="button" class="btn-dope theme-button active">Dark</button>
+              <button type="submit" class="btn-dope theme-button">Christmas</button>
+              {% elif user.profile.theme == "light" %}
+              <input class="theme" type="hidden" name="theme" value="light" />
+              <button type="button" class="btn-dope theme-button active">Light</button>
+              <button type="submit" class="btn-dope theme-button">Dark</button>
+              <button type="submit" class="btn-dope theme-button">Christmas</button>
+              {% elif user.profile.theme == "christmas" %}
+              <input class="theme" type="hidden" name="theme" value="christmas" />
+              <button type="submit" class="btn-dope theme-button">Light</button>
+              <button type="submit" class="btn-dope theme-button">Dark</button>
+              <button type="button" class="btn-dope theme-button active">Christmas</button>
+              {% endif %}
+            </div>
           </div>
         </div>
       </form>
     </div>
   </div>
   <div class="col-12 order-3 col-lg-4 dope-wrapper">
-    <a class="btn-dope toggle" data-toggle="collapse" href="#solong-collapse" aria-expanded="false" aria-controls="solong-collapse">
+    <a class="btn-dope" data-toggle="collapse" href="#solong-collapse" aria-expanded="false" aria-controls="solong-collapse">
       Delete Account
     </a>
     <div class="collapse fade settings-collapse" id="solong-collapse">
+      <p>
+        Delete account? Your playlist and subscriptions will be lost forever.
+      </p>
       <form class="solong-form" action="{% url 'solong' %}" method="POST">
         {% csrf_token %}
-        <p>
-          Delete account? Your playlist and subscriptions will be lost forever.
-        </p>
         <button class="btn-dope" type="submit">
           Yes
         </button>
