--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -6,7 +6,9 @@
     <div class="col-12 charts-result">
       <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
         <span class="charts-rank">
-          {{ forloop.counter }}
+          <strong>
+            {{ forloop.counter }}
+          </strong>
         </span>
         <img class="img-fluid" src="https://{{ podcast.object.artworkUrl }}100x100bb.jpg"
         onerror="this.src='https://dopepod.me/img/{{ podcast.object.artworkUrl }}100x100bb.jpg'" alt="{{ podcast.object.title }}" />
