--- a/podcasts/templates/pagination.html
+++ b/podcasts/templates/pagination.html
@@ -1,7 +1,7 @@
 <div class="col-12 order-3 col-md-6 order-md-1 pages-buttons">
   {% if results.start_url %}
     <a class="btn-dope options-button" href="{{ results.start_url }}">
-      <i class="fas fa-angle-double-left" title="First Page"></i>
+      <i class="fas fa-angle-double-left fa-lg" title="First Page"></i>
     </a>
   {% endif %}
   {% for page in results.pages %}
@@ -17,7 +17,7 @@
   {% endfor %}
   {% if results.end_url %}
     <a class="btn-dope options-button" href="{{ results.end_url }}">
-      <i class="fas fa-angle-double-right" title="Last Page"></i>
+      <i class="fas fa-angle-double-right fa-lg" title="Last Page"></i>
     </a>
   {% endif %}
 </div>
