--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -1,7 +1,6 @@
 {% load static %}
 {% load account %}
 {% load account socialaccount %}
-{% load piwik %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -64,7 +63,29 @@
       {% include "circle_loading.min.html" %} {% include "button_loading.min.html" %}
     </div>
   </div>
-  {% piwik %}
+  <script type="text/javascript">
+    var _paq = _paq || [];
+    _paq.push(["trackPageView"]);
+    _paq.push(["enableLinkTracking"]);
+    (function () {
+      var u = "//em.dopepod.me/";
+      _paq.push(["setTrackerUrl", u + "p.php"]);
+      _paq.push(["setSiteId", "1"]);
+      var d = document,
+        g = d.createElement("script"),
+        s = d.getElementsByTagName("script")[0];
+      g.type = "text/javascript";
+      g.async = true;
+      g.defer = true;
+      g.src = u + "p.js";
+      s.parentNode.insertBefore(g, s);
+    })();
+  </script>
+  <noscript>
+    <p>
+      <img src="//em.dopepod.me/p.php?idsite=1" style="border:0;" alt="" />
+    </p>
+  </noscript>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="//stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
   <script src="{% static 'scripts.min.js' %}"></script>
