--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -63,13 +63,17 @@
       {% include "circle_loading.min.html" %} {% include "button_loading.min.html" %}
     </div>
   </div>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="//stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+  <script src="{% static 'scripts.min.js' %}"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
   <script type="text/javascript">
     var _paq = _paq || [];
     _paq.push(["trackPageView"]);
     _paq.push(["enableLinkTracking"]);
     (function () {
       var u = "//em.dopepod.me/";
-      _paq.push(["setTrackerUrl", u + "p"]);
+      _paq.push(["setTrackerUrl", u + "p.php"]);
       _paq.push(["setSiteId", "1"]);
       var d = document,
         g = d.createElement("script"),
@@ -77,7 +81,7 @@
       g.type = "text/javascript";
       g.async = true;
       g.defer = true;
-      g.src = u + "j";
+      g.src = u + "p.js";
       s.parentNode.insertBefore(g, s);
     })();
   </script>
@@ -86,9 +90,5 @@
       <img src="//em.dopepod.me/p.php?idsite=1" style="border:0;" alt="" />
     </p>
   </noscript>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="//stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-  <script src="{% static 'scripts.min.js' %}"></script>
-  <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
 </body>
 </html>
